<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="230dp"
    android:layout_margin="4dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <ImageView
                android:id="@+id/imgThumb"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/describeImageView"
                android:scaleType="fitXY"
                android:src="@drawable/cover_image" />

            <TextView
                android:id="@+id/tvChapter"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_chapter"
                android:padding="8sp"
                android:text="@string/chapterDemo"
                android:textColor="#fff"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/btn_Delete"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_above="@id/tv_View"
                android:layout_alignParentEnd="true"
                android:background="@drawable/like_click"
                android:contentDescription="@string/describeImageView"
                android:padding="8dp"
                android:src="@drawable/delete"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_View"
                android:layout_width="170dp"
                android:fontFamily="@font/roboto_medium"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@color/edit_text"
                android:drawableStart="@drawable/eye"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="@string/viewChapter"
                android:textColor="#FFF"
                android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="3dp"
            android:text="@string/nameComicDetail"
            android:textColor="#000"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>