<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="8dp"
    android:background="@android:color/transparent"
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/describeCoverStory"
        android:id="@+id/rootbg"
        android:alpha="0.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/cover_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <ImageView
            android:contentDescription="@string/describeCoverStory"
            android:id="@+id/imgThumb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:scaleType="centerCrop"
            android:src="@drawable/cover_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameComicDetail"
                android:textColor="#5e6e9b"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descriptionDetail"
                android:textSize="12sp"
                android:textColor="#000" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>