<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.PageComicActivity">

    <Toolbar
        android:id="@+id/toolbar"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        android:background="@color/material2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/transparent"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="2"
                app:cardCornerRadius="10dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/tv_View">

                    <ImageView
                        android:id="@+id/imgThumb"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/describeImageView"
                        android:scaleType="fitXY"
                        android:src="@drawable/cover_image" />

                    <ImageButton
                        android:id="@+id/btn_Like"
                        android:layout_width="38dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginBottom="@dimen/margin"
                        android:background="@drawable/like_click"
                        android:baselineAlignBottom="true"
                        android:contentDescription="@string/describeImageView"
                        android:padding="8dp"
                        android:src="@drawable/favorite" />
                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    android:fontFamily="@font/roboto_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="@dimen/margin"
                    android:paddingTop="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/nameComic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_header" />

                <TextView
                    android:id="@+id/tv_Update"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/updateLast"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAuthor"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icons_author"
                    android:drawablePadding="@dimen/margin"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_kind"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icons_trend"
                    android:drawablePadding="@dimen/margin"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:drawableStart="@drawable/icon_tag"
                    android:drawablePadding="@dimen/margin"
                    android:gravity="center|start"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />

                <TextView
                    android:id="@+id/tv_View"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icons_follow"
                    android:drawablePadding="@dimen/margin"
                    android:paddingLeft="@dimen/margin"
                    android:paddingRight="@dimen/margin"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal" />
                <TextView
                    android:id="@+id/tv_Des"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:isScrollContainer="true"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"

                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="8dp"
                android:text="@string/categoryComic"
                android:textColor="#000"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/spinnerSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:layout_marginStart="6dp"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/background" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="Chapter:"
                android:layout_alignParentEnd="true"
                android:inputType="number"
                android:paddingEnd="8dp"

                android:textColorHint="@color/grey5"
                android:theme="@style/CustomOutlineBox"
                app:hintTextColor="@color/centerColor"
                app:boxStrokeColor="@color/centerColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFindChap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/search"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/imgFindChap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/dimens_10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/findchapter"></ImageView>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:cardCornerRadius="7dp"
        app:cardElevation="7dp">





        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvChapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin" />
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBookmark"
            style="@style/bookmarkButton"
            android:layout_width="@dimen/dimens_224dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginBottom="6dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@color/darkPink"
            android:text="Start Reading">
        </androidx.appcompat.widget.AppCompatButton>


    </RelativeLayout>
</LinearLayout>
